Enhance contact and login pages with improved styles, form submission button, and updated CSS for better responsiveness

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>تسجيل الدخول - متجر الكتب</title>
     <style>
         body {
-            background-color: #f0f4f8;
+            background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));;
             font-family: 'Tajawal', sans-serif;
             display: flex;
             align-items: center;
@@ -21,7 +21,8 @@
             padding: 30px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-            width: 300px;
+            width: 500px;
+            
             text-align: center;
         }
 
@@ -32,7 +33,7 @@
 
         .login-container input[type="email"],
         .login-container input[type="password"] {
-            width: 100%;
+            width: 90%;
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -40,11 +41,11 @@
         }
 
         .login-container button {
-            background-color: #2C3E50;
+            background-color:  #1C4036;
             color: white;
             border: none;
             padding: 10px;
-            width: 100%;
+            width: 30%;
             border-radius: 5px;
             font-size: 16px;
             margin-top: 10px;
@@ -53,7 +54,7 @@
         }
 
         .login-container button:hover {
-            background-color: #1C4036;
+            background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));;
         }
 
         .error {
