--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تواصل</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form action=""> <h1>تواصل معنا</h1>
+        <input class="container" type="text" name="First" placeholder="First Name" autocomplete="off"required>
+        <input  class="container" type="text" name="Last" placeholder="Last Name"autocomplete="off"required>
+        <input  class="container" type="email" name="Email" placeholder="Email Address"autocomplete="off"required>
+        <textarea  class="container" rows="5" cols="60" name="Message" placeholder="Your Message"autocomplete="off"required></textarea>
+        <button type="submit">Send</button>
+               </form>
+               <h2 class="h2">Email: support@gmail.com</h2>
+    
+
     
 </body>
 </html>
