Add authentication functionality with registration and login handling in auth.php; update form submission in signuplogin.html and login.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav class="bg-gray-700 py-4">
         <div class="container mx-auto flex justify-center space-x-8">
-            <a  href="login.html" class="text-white hover:underline">تسجيل الدخول</a>
+            <a  href="signuplogin.html" class="text-white hover:underline">تسجيل الدخول</a>
             <a href="purchasingPage.html" class="text-white hover:underline">سلة المشتريات</a>
             <a href="contact.html" class="text-white hover:underline">تواصل</a>
         </div>
