Refactor authentication handling in auth.php with improved error management and session management; remove legacy login and sign-up HTML files, and update navigation links to point to PHP pages.

--- a/marktpage.html
+++ b/marktpage.html
@@ -12,7 +12,7 @@
     <!-- Navigation -->
     <div class="bg-gray-700 text-white py-4 flex justify-between items-center px-6">
         <ul class="flex space-x-6">
-            <li><a href="login.html" class="hover:text-[#F9E4B7] font-bold">تسجيل الدخول</a></li>
+            <li><a href="login.php" class="hover:text-[#F9E4B7] font-bold">تسجيل الدخول</a></li>
             <li><a href="purchasingPage.html" class="hover:text-[#F9E4B7] font-bold">سلة المشتريات</a></li>
             <li><a href="marktpage.html" class="hover:text-[#F9E4B7] font-bold">المنتجات</a></li>
             <li><a href="index.html" class="hover:text-[#F9E4B7] font-bold">الرئيسية</a></li>
